2020-02-26 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macro:

          * geda_get_misc_yalign

    * src/widgets/geda_label.c: Utilize macro:

          * geda_get_misc_yalign

2020-02-25 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros:

          * geda_get_misc_xpad
          * geda_get_misc_ypad

    * src/widgets/geda_label.c: Utilize macro:

          * geda_get_widget_requisition
          * geda_get_misc_ypad

2020-02-24 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macro:

          * geda_get_misc_xalign

    * src/widgets/geda_invisible.c: Replace GTK_WIDGET_SET_FLAGS with
      gtk_widget_set_visible. Utilize macros:

          * geda_set_widget_style

    * src/widgets/geda_label.c: Utilize macro:

          * geda_get_misc_xalign

2020-02-21 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_image_menu_item.c: Utilize macros:

          * geda_get_container_border_width
          * geda_get_widget_style

    * src/widgets/geda_invisible.c: Utilize macros:

          * geda_get_widget_style
          * geda_set_widget_window

    * src/widgets/geda_label.c: Utilize macro:

          * geda_get_widget_style

2020-02-13 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Cast gtk_widget_get_parent return pointer
    * to void for geda_get_widget_parent Gtk >= 3. Add macros:

          * geda_set_widget_state

    * src/widgets/geda_handlebox.c: Utilize macros:

          * geda_get_widget_style
          * geda_get_widget_state

2020-02-12 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_handlebox.h: Remove GedaHandleBox members deskoff_x and
      deskoff_y.

    * src/widgets/geda_handlebox.c: Eliminate the relative offset between the
      the desktop and the root window; deskoff_x and deskoff_y. Eliminate
      desk_x and desk_y in geda_handle_box_button_press and the call to